--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,15 @@ body {
   background-repeat: no-repeat;
 }
 
+h2 {
+  color: white;
+}
+
+h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .active {
   color: blue;
 }
@@ -11,4 +20,21 @@ body {
 .dot {
   height: 8px;
   width: 8px;
+}
+
+.hoverInfo {
+  background: white;
+  padding: 10px;
+  border-radius: 5px;
+  max-width: 200px;
+  word-wrap: normal;
+}
+
+.memberFaces {
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.message {
+  font-style: italic;
 }
